# hangman

./: LICENSE  README.md  hangman.cabal  haskell-hangman.cabal
src/: Hangman.hs  Main.hs
test/: Spec.hs
