name:                haskell-hangman
version:             0.1.0.0
synopsis:            A hangman CLI game made in Haskell!
homepage:            https://github.com/kutyel/haskell-hangman#readme
license:             MIT
license-file:        LICENSE
author:              Flavio Corpa
maintainer:          flaviocorpa@gmail.com
copyright:           Copyright © 2019 Flavio Corpa
category:            Game
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md
                   , data/dict.txt

executable haskell-hangman
  hs-source-dirs:      src
  main-is:             Main.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
                     , random
                     , split
